# retail-data-platform

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
docs/: context_for_claude.md  git_github_primer.md  module1_pos_simulator.md  resa_reference.md  retail_data_platform_design_v1.1.docx
output/smoke_test/store=1/date=2024-01-01/hour=02/: rtlog.ndjson
output/smoke_test/store=1/date=2024-01-01/hour=06/: rtlog.ndjson
output/smoke_test/store=1/date=2024-01-01/hour=08/: rtlog.ndjson
output/smoke_test/store=1/date=2024-01-01/hour=09/: rtlog.ndjson
output/smoke_test/store=1/date=2024-01-01/hour=10/: rtlog.ndjson
output/smoke_test/store=1/date=2024-01-01/hour=11/: rtlog.ndjson
output/smoke_test/store=1/date=2024-01-01/hour=12/: rtlog.ndjson
output/smoke_test/store=1/date=2024-01-01/hour=13/: rtlog.ndjson
output/smoke_test/store=1/date=2024-01-01/hour=14/: rtlog.ndjson
output/smoke_test/store=1/date=2024-01-01/hour=15/: rtlog.ndjson
output/smoke_test/store=1/date=2024-01-01/hour=16/: rtlog.ndjson
output/smoke_test/store=1/date=2024-01-01/hour=17/: rtlog.ndjson
output/smoke_test/store=1/date=2024-01-01/hour=18/: rtlog.ndjson
output/smoke_test/store=1/date=2024-01-01/hour=19/: rtlog.ndjson
output/smoke_test/store=1/date=2024-01-01/hour=20/: rtlog.ndjson
pos_simulator/: Dockerfile  __init__.py  config.py  faults.py  generator.py  main.py  models.py  reference_data.py  run.sh  store_registry.py  stores.csv  writer.py
tests/pos_simulator/: conftest.py  test_faults.py  test_generator.py  test_writer.py
(+113 files in other folders)
